--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">KWOD</string>
     <string name="action_settings">Settings</string>
+    <string name="app_description">Opis aplikacji</string>
+
+    <string name="prepare_report_button">Prepare Report</string>
+    <string name="incidents_list_button">Incidents List</string>
 </resources>
