--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">KWOD</string>
+    <string name="app_name">Kieszonkowy sanitariusz</string>
     <string name="action_settings">Settings</string>
-    <string name="app_description">Opis aplikacji</string>
-
+    <string name="app_description">Aplikacja mająca na celu dostarczenia informacji na
+        temat przeprowadzenia wstępnej diagnostyki i udzielania pierwszej pomocy w sytuacjach
+        mogących zagrażać życiu lub zdrowiu </string>
     <string name="prepare_report_button">Prepare Report</string>
     <string name="incidents_list_button">Incidents List</string>
     <string name="przyczyna_podejrzenie">Przyczyna/Podejrzenie</string>
